# LLM_Arduino

./: .gitignore  ARCHITECTURE.md  FEATURES_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  ISSUES.md  LICENSE  QUICKSTART.md  README.md  README_IMPROVED.md  REFACTORING_REQUEST.md  SYSTEM_ARCHITECTURE.md  pyproject.toml  기능_가이드.md
.codex/: rules.md
.cursor/plans/: home_assistant_pet_enhancement_6da6651c.plan.md
.cursor/rules/: arduino-ino.mdc  project-standards.mdc
.kiro/rules/: project-rules.md
.kiro/settings/: lsp.json
arduino/atom_echo_m5stack_esp32_ino/: atom_echo_improved.ino  atom_echo_m5stack_esp32_ino.ino  audio_buffer.cpp  audio_buffer.h  config.h  config.h.example  connection.cpp  connection.h  device_secrets.h.example  led_control.cpp  led_control.h  protocol.cpp  protocol.h  servo_control.cpp  servo_control.h  vad.cpp  vad.h
arduino/test/: test.ino
ccoli/: __init__.py  cli.py
docker/: Dockerfile  docker-compose.yml
docs/: API.md  PROTOCOL.md  TTS_BUFFER_IMPROVEMENTS.md  USER_GUIDE.md
server/: agent_mode.py  agent_mode_improved.py  commands.yaml  config.yaml  config_loader.py  emotion_system.py  env.example  info_services.py  logger_config.py  memory_manager.py  proactive_interaction.py  requirements.txt  robot_mode.py  robot_mode_improved.py  scheduler.py  server.py  stt.py  stt_improved.py
server/memory/: Longterm_Memory.md  Relation.md  Shortterm_Memory.md  Soul.md  User.md
server/src/: __init__.py  agent_mode.py  audio_processor.py  connection_manager.py  input_gate.py  intent_parser.py  job_queue.py  llm_client.py  protocol.py  (+5 more)
(+9 files in other folders)
